freshed-rs-macros/tests/ui/fail/component_children_conflict_html_ide.stderr
error: children provided both as prop and as child nodes
  --> tests/ui/fail/component_children_conflict_html_ide.rs:18:30
   |
18 |     let _ = html_ide!(<Panel children={text}>{"body"}</Panel>);
   |                              ^^^^^^^^
